# RiverSim

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Glossary.hpp  Glossary.md  INSTALL  README.md  VersionsHistory.hpp  VersionsHistory.md  simdata.json  simdata.msh  simdata.vtk  start
archive/mesh_gen_and_solvers_test/dealii/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  Doxyfile.in  GeometryPrimitives_8hpp.html  GeometryPrimitives_8hpp__dep__incl.md5  GeometryPrimitives_8hpp_source.html  Glossary_8hpp_source.html  MathematicaScripts_8hpp_source.html  README_8md.html  README_8md_source.html  RectangularRegionTest.nb  Test.nb  VersionsHistory.html  VersionsHistory_8hpp_source.html  annotated.html  annotated_dup.js  border_8cpp.html  border_8cpp__incl.map  border_8cpp__incl.md5  border_8cpp_source.html  border_8hpp.html  border_8hpp__dep__incl.map  border_8hpp__dep__incl.md5  border_8hpp__incl.map  border_8hpp__incl.md5  border_8hpp_source.html  boundary_8hpp.html  boundary_8hpp__dep__incl.map  boundary_8hpp__dep__incl.md5  boundary_8hpp__incl.map  boundary_8hpp__incl.md5  boundary_8hpp_source.html  bug.html  classBorder.html  classBorder__coll__graph.map  classBorder__coll__graph.md5  classFunction.html  classFunction__coll__graph.md5  classFunction__inherit__graph.map  classFunction__inherit__graph.md5  classRiver_1_1AreaConstraint-members.html  (+2500 more)
docs/d0/d14/: common_8cpp__incl.map  common_8cpp__incl.md5
docs/d0/d36/: class_river_1_1_gmsh__coll__graph.md5
docs/d0/d43/: class_river_1_1_geom_point-members.html
docs/d0/d70/: class_river_1_1_model.html  class_river_1_1_model.js  class_river_1_1_model_aab5fcb5b57e1306053e5db9d6b6f15c0_icgraph.map  class_river_1_1_model_aab5fcb5b57e1306053e5db9d6b6f15c0_icgraph.md5  class_river_1_1_model_ac7e7012f34eb2ed1b959162bc78b8f0d_icgraph.map  class_river_1_1_model_ac7e7012f34eb2ed1b959162bc78b8f0d_icgraph.md5  class_river_1_1_model_ad22bc4fecfe36e2cde033df2a5220c07_icgraph.map  class_river_1_1_model_ad22bc4fecfe36e2cde033df2a5220c07_icgraph.md5
docs/d0/d95/: class_river_1_1_polar__inherit__graph.map  class_river_1_1_polar__inherit__graph.md5
docs/d0/db7/: class_river_1_1_tree-members.html
docs/d0/dbb/: class_river_1_1_geom_point.html  class_river_1_1_geom_point.js  class_river_1_1_geom_point_a1c091dc0abfbad1ac8d5cc659db422f6_icgraph.map  class_river_1_1_geom_point_a1c091dc0abfbad1ac8d5cc659db422f6_icgraph.md5  class_river_1_1_geom_point_a524b8053c85375849eb6037793d6411e_cgraph.md5  class_river_1_1_geom_point_a7749a4f2404dca387475ba3fd9e01bf3_cgraph.map  class_river_1_1_geom_point_a7749a4f2404dca387475ba3fd9e01bf3_cgraph.md5  class_river_1_1_geom_point_a8a4dd9e43fc222c4276c67bc258812ec_icgraph.map  class_river_1_1_geom_point_a8a4dd9e43fc222c4276c67bc258812ec_icgraph.md5  class_river_1_1_geom_point_a9e12280c2ff754f15207a9a5417f21bc_cgraph.map  class_river_1_1_geom_point_a9e12280c2ff754f15207a9a5417f21bc_cgraph.md5  class_river_1_1_geom_point_ac7b5a6f51601c28b1c169efd99faa80e_cgraph.map  class_river_1_1_geom_point_ac7b5a6f51601c28b1c169efd99faa80e_cgraph.md5  class_river_1_1_geom_point_ac7b5a6f51601c28b1c169efd99faa80e_icgraph.map  class_river_1_1_geom_point_ac7b5a6f51601c28b1c169efd99faa80e_icgraph.md5  class_river_1_1_geom_point_ad859db1c8c4a3ba2d4ad9e6b9f774e92_cgraph.map  class_river_1_1_geom_point_ad859db1c8c4a3ba2d4ad9e6b9f774e92_cgraph.md5
docs/d0/dc6/: class_river_1_1_branch_new-members.html
docs/d0/dd6/: class_river_1_1_geom_tag__coll__graph.map  class_river_1_1_geom_tag__coll__graph.md5
docs/d1/d14/: physmodel_8hpp__incl.map  physmodel_8hpp__incl.md5
docs/d1/d4b/: border_8hpp__dep__incl.map  (+1 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+114 more)
doxy/: CMakeLists.txt  Doxyfile.in  footer.html  header.html
doxy/articles/: README.md  stub.hpp  stub.md
source/: CMakeLists.txt  README.md  app.cpp  app.hpp  boundary.cpp  boundary.hpp  boundary_generator.cpp  io.cpp  io.hpp  main.cpp  mesh.cpp  meshgen.cpp  perfomance.cpp  physmodel.cpp  point.cpp  pythonapi.cpp  pythonapi.hpp  river.cpp  rivers.cpp  rivers.hpp  riversim.cpp  riversim.hpp  solver.cpp  solver.hpp  source.cpp  tethex.cpp  tethex.hpp  tree.cpp  triangle.cpp  triangle.hpp  triangle_c.cpp
source/river/: CMakeLists.txt  GeometryPrimitives.cpp  GeometryPrimitives.hpp  README.md  border.cpp  border.hpp  boundary.cpp  boundary.hpp  boundary_generator.cpp  boundary_generator.hpp  branch.cpp  branch.hpp  common.cpp  common.hpp  cxxopts.hpp  geometry.cpp  geometry.hpp  geometrynew.cpp  geometrynew.hpp  io.cpp  io.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  physmodel.cpp  physmodel.hpp  point.cpp  point.hpp  region.cpp  region.hpp  river.cpp  river.hpp  rivers.cpp  rivers.hpp  riversim.cpp  riversim.hpp  riversolver.cpp  riversolver.hpp  solver.cpp  (+12 more)
tests/: CMakeLists.txt  GeometryPrimitives.cpp  README.md  better_series_params_calculation1.vtk  better_series_params_calculation2.vtk  border.cpp  boundary.cpp  boundary_generator.cpp  branch.cpp  circular_boundary_same_1.msh  circular_boundary_smooth.msh  convergence_test.vtk  debug_linear_simulation.msh  debug_solver_convergence_on_laplacea_regio.vtk  default_run.msh  geometrynew.cpp  integration_params_test.msh  integration_params_test1.msh  integration_params_test2.msh  integration_tests.cpp  io.cpp  mesh.cpp  meshgen.cpp  open_mesh_object.vtk  physmodel.cpp  point.cpp  rectangular_boundary.msh  refinment_radius_exponant_sigma_0.msh  refinment_radius_exponant_sigma_1.msh  region.cpp  rivers.cpp  riversim.cpp  riversim_new.cpp  solver.cpp  test_branch.cpp  test_geometry.cpp  test_point.cpp  test_tethex.cpp  tethex.cpp  tip_points.msh  (+3 more)
(+2327 files in other folders)
